--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <nav class="nav">
     <ul class="nav__links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="soon.html">Coming Soon!</a></li>
-      <li><a href="soon.html">Also Coming Soon</a></li>
+      <li><a href="#">Tips</a></li>
+      <li><a href="#">Locations</a></li>
     </ul>
   </nav>
 </header>
@@ -25,13 +25,17 @@
 </section>
 
 <section class="locations">
-  <h2 class="quotes">Important quotes!</h2>
+  <section class="fishquotes">
   <p>“Fishing in a place is a meditation on the rhythm of a tide, a season, the arc of a year, and the seasons of life.“ - Carl Safina</p>
+  <p>"The charm of fishing is that it is the pursuit of what is elusive but attainable, a perpetual series of occasions for hope." - John Buchan</p>
   <p>“Give a man a fish and you feed him for a day. Teach a man to fish and you feed him for a lifetime.“ - Anne Ritchie</p>
-  <h2 class="martinloc">Locations Martin travelled to</h2>
-  <p>Martin travelled to Mississippi and was able to find not only Catfish but also Trout!</p>
-  <p>Martin also visited Alabama and found that their were various fish to experience.</p>
-  <p>Martin's favorite place to visit, though, was California, in which he found a plethora of various fish.</p>
+  </section>
+  <section class="martin__locations">
+    <h2 class="martinloc">Locations Martin travelled to</h2>
+    <p>Martin travelled to Mississippi and was able to find not only Catfish but also Trout!</p>
+    <p>Martin also visited Alabama and found that their were various fish to experience.</p>
+    <p>Martin's favorite place to visit, though, was California, in which he found a plethora of various fish.</p>
+  </section>
 </section>
 </section>
 <section class="process">
