Added more javascript and a coming soon page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <ul class="nav__links">
       <li><a href="index.html">Home</a></li>
       <li><a href="soon.html">Coming Soon!</a></li>
-      <li><a href="soon.html">Also Coming Soon</a></li>
     </ul>
   </nav>
 </header>
@@ -24,15 +23,10 @@
   
 </section>
 
-<section class="locations">
-  <h2 class="quotes">Important quotes!</h2>
-  <p>“Fishing in a place is a meditation on the rhythm of a tide, a season, the arc of a year, and the seasons of life.“ - Carl Safina</p>
-  <p>“Give a man a fish and you feed him for a day. Teach a man to fish and you feed him for a lifetime.“ - Anne Ritchie</p>
-  <h2 class="martinloc">Locations Martin travelled to</h2>
-  <p>Martin travelled to Mississippi and was able to find not only Catfish but also Trout!</p>
-  <p>Martin also visited Alabama and found that their were various fish to experience.</p>
-  <p>Martin's favorite place to visit, though, was California, in which he found a plethora of various fish.</p>
+<section class="allareas">
+
 </section>
+
 </section>
 <section class="process">
   <aside>
@@ -43,14 +37,12 @@
       <li>The optimal temperature of a fish tank should be around 75-80 degrees Fahrenheit.</p>
   </aside>
   </section>
-<section class="tips">
-  <article>
-    <h2 class="tippies">Helpful Tips!</h2>
-    <p>When scuba diving, NEVER hold your breath! Always breathe normally.</p>
-    <p>Always double check your scuba gear before diving.</p>
-    <p>When fishing, make sure to swim your lure accurately to how real bait would move.</p>
-  </article>
-</section>
-<script type="module" src="./scripts/main.js"></script>
+
+  <section class="alltips">
+  
+  </section>
+<script type="module" src="./scripts/tips/main.js"></script>
+<script type="module" src="./scripts/locations/main.js"></script>
+<script type="module" src="./scripts/fish/main.js"></script>
 </body>
 </html>
