created an images folder and added the logo inside of it

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <header class="navbar">
-  <img class="sitelogo" src="fish.png" alt="sitelogo">
+  <img class="sitelogo" src="images/fish.png" alt="sitelogo">
   <nav class="nav">
     <ul class="nav__links">
       <li><a href="index.html">Home</a></li>
